@@ -15,6 +15,8 @@ Version 1.3
 * update in-line help for mk5control
 * infrastructure in place for transient event copy
 * checkdir -- allow 800 frames per second mode
+* Check that input file exists before attempting correlation
+* mk5dir: Mark4 directories from after 2009 Dec 31 would end up with wrong MJD
 * Version for DiFX-1.5.3
 
 Version 1.2
